# phishingDetector

./: .gitignore  README.md  main.py  packages.txt  pyproject.toml  requirements.txt
api/: serializers.py  urls.py
core/: settings.py  urls.py
detector/: admin.py  ai_detector.py  gmail_client.py  link_analyzer.py  models.py  urls.py  views.py
detector/migrations/: 0001_initial.py  0002_alter_gmailaccount_last_sync.py
detector/templates/: index.html
detector/templates/auth/: login.html  signup.html
detector/templates/detector/: connect_gmail.html  dashboard.html  email_detail.html  email_list.html
detector/templates/profile/: profile.html
tests/: test_aidetector.py  test_gmailclient.py  test_messages.py  test_oauth.py
