[project]
name = "phishingdetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gunicorn>=25.1.0",
    "numpy>=2.4.2",
    "psycopg[binary]>=3.3.2",
    "python-whois>=0.9.6",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
